Fix recent item image overflow and focus size.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -1092,6 +1092,11 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 .record .title {
     @extend h3;
     font-weight: bold;
+    overflow: hidden;
+
+    a:focus {
+        outline-offset: -2px;
+    }
 }
 
 .recent-title {
